chnage python version in notebook

--- a/house_price.ipynb
+++ b/house_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5e3f6ca8-a410-4709-831b-323ffc95966f",
    "metadata": {},
    "outputs": [],
@@ -2071,9 +2071,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.13",
    "language": "python",
-   "name": "python3"
+   "name": "python313"
   },
   "language_info": {
    "codemirror_mode": {
